--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
     "next-themes": "^0.4.6",
+    "openai": "^5.19.1",
     "react": "^19",
     "react-dom": "^19",
     "tailwind-merge": "^2.5.5"
